--- a/frontend/src/css/navbar.css
+++ b/frontend/src/css/navbar.css
@@ -38,31 +38,44 @@
 .nav-link {
   color: #ccc;
   text-decoration: none;
-  font-size: 16px;
+  font-size: 1.4rem;
   transition: all 0.3s ease;
 }
 
 .nav-link:hover,
 .nav-link.active {
-  color: white;
-  border-bottom: 2px solid #f8db37; 
+  color: #ECE852;
+  border-bottom: 2px solid #ECE852; 
   font-weight: bold;
 }
 
 /* Login / Logout Button */
 .btn-primary {
-  background-color: #f8db37;
+  background-color: #ECE852;
   border: none;
   color: black;
   font-size: 16px;
-  font-weight: 500;
+  font-weight:700;
   padding: 6px 15px;
   transition: all 0.3s ease;
 }
-
-.btn-primary:hover {
-  background-color: #e5c100;
+.btnav{
+font-size: 1.3rem;
+padding: 8px 20px;
+background-color: #ECE852;
+font-weight: bolder;
+border-radius: 10px;
+border: none;
+color: #000;
+transition:.5s all ease-in;
 }
+
+.btnav:hover{
+  border: 2px solid #ECE852;
+  color: #FFF;
+  background-color:#222;
+}
+
 
 .dropdown-menu {
   position: absolute;
