--- a/frontend/src/css/slide.css
+++ b/frontend/src/css/slide.css
@@ -1,5 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Montagu+Slab:opsz,wght@16..144,100..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+
 .hero-section {
     position: relative;
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    opacity:0.7;
   }
   
   .hero-section::before {
@@ -8,6 +15,25 @@
     inset: 0;
     background-color: rgba(0, 0, 0, 0.4); /* dark overlay */
   }
+
+  .slide-heading{
+    font-family: "Montagu Slab";
+    font-weight: 600;
+  }
+  .slide-para{
+    font-size: 1.5rem;
+    font-weight: 600;
+  }
+
+  .btn-slide{
+    background-color: #ECE852;
+    padding:10px 25px;
+    border-radius: 10px;
+    font-weight:bolder;
+    font-size: 1.2rem;
+    text-decoration: none;
+  }
+  
   
   .hero-section .container {
     position: relative;
