--- a/frontend/src/css/services.css
+++ b/frontend/src/css/services.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Fugaz+One&family=Montagu+Slab:opsz,wght@16..144,100..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&display=swap');
+
 .Services-section {
     text-align: center;
     padding: 30px 20px;
@@ -5,6 +7,7 @@
 }
 
 .Services-section h2 {
+    font-family: "Open Sans", sans-serif;
     margin: 20px;
     font-size: 2rem;
     font-weight: 600;
@@ -23,6 +26,7 @@
 .service-box {
     background-color: white;
     box-shadow: 0 0 10px black;
+    border-radius: 10px;
     flex: 1 1 22%;   
     max-width: 22%;
     min-width: 220px;
@@ -35,7 +39,7 @@
 }
 
 .service-box h3 {
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     margin-bottom: 10px;
 }
 
