--- a/frontend/src/css/slide.css
+++ b/frontend/src/css/slide.css
@@ -2,7 +2,7 @@
 
 .hero-section {
   position: relative;
-  background-size: cover;
+  background-size: 100% 100%;
   background-position: center;
   height: 100vh;
   display: flex;
@@ -10,6 +10,25 @@
   justify-content: flex-start;
   padding: 0 10%;
   color: #fff;
+  animation: slideimg 10s linear infinite;
+}
+
+@keyframes slideimg{
+  0%{
+    background-image: url(../assets/img/slide2.jpg);
+  }
+  25%{
+    background-image: url(../assets/img/slide1.jpg);
+  }
+  50%{
+    background-image: url(../assets/img/slide3.jpg);
+  }
+  75%{
+    background-image: url(../assets/img/slide4.jpg);
+  }
+  100%{
+    background-image: url(../assets/img/slide6.jpg);
+  }
 }
 
 .hero-section::before {
