--- a/frontend/src/css/Hr/HRAuth.css
+++ b/frontend/src/css/Hr/HRAuth.css
@@ -5,6 +5,9 @@
   align-items: center;
   background: linear-gradient(135deg, #eef2ff, #e0e7ff);
   padding: 30px;
+  animation: HRLogin ease-in-out;
+    animation-timeline: view();
+    animation-range:entry 0% cover 40%;
 }
 
 .hrauth-box {
@@ -72,14 +75,25 @@
   text-decoration: underline;
 }
 
+@keyframes HRLogin {
+  from{
+    opacity:0;
+    transform: translateX(0px);
+  }
+  to{
+    opacity:1;
+    transform: translateX(100px);
+  }
+}
+
 @keyframes fadeInUp {
   0% {
     opacity: 0;
-    transform: translateY(30px);
+    transform: translatex(0px);
   }
   100% {
     opacity: 1;
-    transform: translateY(0);
+    transform: translatex(10px);
   }
 }
 
